# MCP-BOE

./: .gitignore  CLAUDE.md  PLAN_CI_CD.md  README.md  claude_mcp_config.json  claude_mcp_config_uvx.json  pyproject.toml  rest_api_wrapper.py  test_error_handling.py  test_improvements.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: API_LIMITATIONS.md
examples/: basic_usage.py  common_laws_example.py
src/mcp_boe/: __init__.py  __main__.py  server.py
src/mcp_boe/data/: common_laws.py
src/mcp_boe/models/: boe_models.py
src/mcp_boe/tools/: auxiliary.py  common_laws_tool.py  documents.py  legislation.py  summaries.py
src/mcp_boe/utils/: http_client.py  warnings_handler.py
testing_mcp_boe_consolidada/: README.md  TRACKING_PROGRESO.md
testing_mcp_boe_consolidada/00_estructura/: METODOLOGIA_DOCUMENTACION.md  PLAN_BANCO_PRUEBAS_MCP_BOE_CONSOLIDADA.md  RESUMEN_VALIDACION.md  RPVEA_BOE_FRAMEWORK.md  quality_gaps.json  test_registry.json
testing_mcp_boe_consolidada/00_estructura/PLANTILLAS/: template_informe_final.md  template_nivel.md  template_session.md  template_test.md
testing_mcp_boe_consolidada/bugs/: BUG-001_apierror_inheritance.md
testing_mcp_boe_consolidada/sessions/: SESSION_001.md
